<resources>
    <string name="app_name">Android-cat</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="reload">Reload</string>
    <string name="addCat">Add</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="color">Color:</string>
    <string name="breed">Breed:</string>
    <string name="weight">Weight:</string>
    <string name="log_token">Log Token</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
